# rails-session

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  rails-session.cabal  stack-7.10.yaml  stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack.yaml  upload_docs
.github/workflows/: CI.yml
src/Web/Rails/: Session.hs
src/Web/Rails3/: Session.hs
test/: Rails3  Rails4  Spec.hs
test/cookies/: Rails4-InvalidSignature
