name:                rails-session
version:             0.1.0.0
synopsis:            Decrypt Ruby on Rails sessions in Haskell
description:         Please see README.md
homepage:            http://github.com/iconnect/rails-session#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Cunningham & Alfredo di Napoli
maintainer:          philip@irisconnect.co.uk
copyright:           2016-2017 Philip Cunningham & Alfredo di Napoli
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Source-repository head
  type: git
  location: https://github.com/iconnect/rails-session

library
  hs-source-dirs:      src
  exposed-modules:     Web.Rails.Session
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , cryptonite
                     , http-types
                     , pbkdf
                     , ruby-marshal
                     , string-conv
                     , vector
  default-language:    Haskell2010

test-suite specs
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , rails-session
                     , ruby-marshal
                     , tasty
                     , tasty-hspec
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iconnect/haskell-oss/rails-interop
